--- a/src/AD419.Mvc/package.json
+++ b/src/AD419.Mvc/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/ucdavis/AD419ReportingUX#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jquery": "^3.3.29",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
