--- a/src/AD419.Mvc/tsconfig.json
+++ b/src/AD419.Mvc/tsconfig.json
@@ -2,21 +2,15 @@
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": ".",
-    "lib": [
-      "dom",
-      "es2015"
-    ],
+    "lib": ["dom", "es2015"],
     "module": "es2015",
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "target": "es5",
     "jsx": "react",
     "sourceMap": true,
     "skipDefaultLibCheck": true,
     "noEmit": true
   },
-  "exclude": [
-    "bin",
-    "node_modules",
-    "wwwroot"
-  ]
+  "exclude": ["bin", "node_modules", "wwwroot"]
 }
