--- a/src/AD419.Mvc/package.json
+++ b/src/AD419.Mvc/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-table": "^6.10.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -28,6 +29,7 @@
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-table": "^6.8.5",
     "@types/webpack-env": "1.13.9",
     "aspnet-webpack": "^3.0.0",
     "aspnet-webpack-react": "^4.0.0",
